add params to swagger comments
